--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" ng-app="valintaperusteet">
+<html ng-app="valintaperusteet">
 
 <head>
     <title>Valintaperusteiden mallinnus</title>
 
-    <script th:src="@{/jslib/jquery-1.8.3/jquery-1.8.3.js}" src="../jslib/jquery-1.8.3/jquery-1.8.3.js"></script>
-    <script th:src="@{/jslib/jquery-1.8.3/jquery.nestable.js}" src="../jslib/jquery-1.8.3/jquery.nestable.js"></script>
-    <script type="text/javascript" th:src="@{/jslib/jquery-ui-1.9.2/jquery-ui.min.js}"  src="../jslib/jquery-ui-1.9.2/jquery-ui.min.js"></script>
+    <!-- libs -->
+    <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery-1.8.3.js"></script>
+    <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.nestable.js"></script>
+    <script type="text/javascript" src="../jslib/jquery-ui-1.9.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.1.4/angular.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.1.4/angular-resource.js"></script>
 
+    <!--conf -->
+    <script type="text/javascript"  src="../configuration/configuration.js"></script>
 
-    <script th:src="@{/jslib/angular-1.1.4/angular.js}" src="../jslib/angular-1.1.4/angular.js"></script>
-    <script th:src="@{/jslib/angular-1.1.4/angular-resource.js}" src="../jslib/angular-1.1.4/angular-resource.js"></script>
+    <!-- app js-->
+    <script type="text/javascript" src="../js/valintaperusteet.js"></script>
+    <script type="text/javascript" src="../js/valintaryhmaHakukohdeTree.js"></script>
+    <script type="text/javascript" src="../js/valintaryhma.js"></script>
+    <script type="text/javascript" src="../js/hakukohde.js"></script>
+    <script type="text/javascript" src="../js/hakukohdevalinnanvaihe.js"></script>
+    <script type="text/javascript" src="../js/valintatapajono.js"></script>
+    <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
+    <script type="text/javascript" src="../js/directives.js"></script>
+    <script type="text/javascript" src="../js/laskentakaava.js"></script>
+    <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
+    <script type="text/javascript" src="../js/loading.js"></script>
+    <script type="text/javascript" src="../js/valintakoe.js"></script>
 
-    <script th:inline="javascript">
-        /*<![CDATA[*/;
-        SERVICE_URL_BASE = /*[[${serviceUrl}]]*/ "/valintaperusteet-service/";
-        TEMPLATE_URL_BASE = /*[[@{/html/}]]*/ "";
-        /*]]>*/
-    </script>
-    <script th:src="@{/js/valintaperusteet.js}" src="../js/valintaperusteet.js"></script>
-    <script th:src="@{/js/valintaryhmaHakukohdeTree.js}" src="../js/valintaryhmaHakukohdeTree.js"></script>
-    <script th:src="@{/js/valintaryhma.js}" src="../js/valintaryhma.js"></script>
-    <script th:src="@{/js/hakukohde.js}" src="../js/hakukohde.js"></script>
-    <script th:src="@{/js/valinnanvaihe.js}" src="../js/hakukohdevalinnanvaihe.js"></script>
-    <script th:src="@{/js/valintatapajono.js}" src="../js/valintatapajono.js"></script>
-    <script th:src="@{/js/jarjestyskriteeri.js}" src="../js/jarjestyskriteeri.js"></script>
-    <script th:src="@{/js/directives.js}" src="../js/directives.js"></script>
-    <script th:src="@{/js/laskentakaava.js}" src="../js/laskentakaava.js"></script>
-    <script th:src="@{/js/valintaryhmavalinnanvaihe.js}" src="../js/valintaryhmavalinnanvaihe.js"></script>
-    <script th:src="@{/js/loading.js}" src="../js/loading.js"></script>
-    
-    <script th:src="@{/js/valintakoe.js}" src="../js/valintakoe.js"></script>
+    <!-- css -->
+    <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
+    <link href="../css/proto.css" rel="stylesheet" type="text/css" />
 
-    <link th:remove="all" href="../css/virkailija.css" rel="stylesheet" type="text/css" />
-    <link th:remove="all" href="../css/proto.css" rel="stylesheet" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
 </head>
 <body>
-    <div id="wrapper">
-        <div>
-            <div id="angularbox" ng-view=""></div>
-        </div>
-        <div style="clear:both;"></div>
+<div id="wrapper">
+    <div>
+        <div id="angularbox" ng-view=""></div>
     </div>
+    <div style="clear:both;"></div>
+</div>
 
-    <div ng-controller="LoadingCtrl"><div ng-show="loading" style="position: fixed; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;">käsitellään...</div></div>
+<div ng-controller="LoadingCtrl"><div ng-show="loading" style="position: fixed; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;">käsitellään...</div></div>
 </body>
 
 </html>
