vielä hieman properties hämmentämistä

--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -112,7 +112,7 @@
     <div class="form-row width-100">
         <div class="form-row-label">Valinnan vaiheet</div>
         <div  class="form-row-content width-60">
-            <table ng-show="model.valinnanvaiheet" class="virkailija-table-1 width-60">
+            <table ng-show="model.valinnanvaiheet" class="virkailija-table-1 margin-bottom-2 width-60">
                 <thead>
                 <tr>
                     <th>Aktiivinen</th>
