Aktiivinen kenttä valintakokeelle

--- a/src/main/webapp/html/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/html/valintakoevalinnanvaihelomake.html
@@ -24,6 +24,7 @@
         <table class="virkailija-table-1 margin-bottom-2" ng-show="model.valintakokeet">
             <thead>    
                 <tr>
+                    <th>Aktiivinen</th>
                     <th>Tunniste</th>
                     <th>Nimi</th>
                     <th>Kuvaus</th>
@@ -32,6 +33,7 @@
             </thead>
             <tbody ng-model="model.valintakokeet" class="margin-top-2">
                 <tr ng-repeat="valintakoe in model.valintakokeet">
+                    <td><input type="checkbox" ng-model="valintakoe.aktiivinen" /></td>
                     <td>{{valintakoe.tunniste}}</td>
                     <td><a ng-click="modifyvalintakoe(valintakoe.oid)" >{{valintakoe.nimi}}</a></td>
                     <td>{{valintakoe.kuvaus}}</td>
