import toiminnallisuus valintaperusteiden mallintamiseen

--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -30,6 +30,8 @@
 <div class="tabs">
     <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
     <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+
     <!-- <a href="#/valinnanvaihe/:id/laskentakaava" class="tab"><span>Laskentakaavat</span></a>    -->
 </div>
 <div class="tabsheets">
