--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -27,6 +27,9 @@
     <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/loading.js"></script>
     <script type="text/javascript" src="../js/valintakoe.js"></script>
+    <script type="text/javascript" src="../js/import.js"></script>
+
+
 
     <!-- css -->
     <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
