import toiminnallisuus valintaperusteiden mallintamiseen

--- a/src/main/webapp/html/import.html
+++ b/src/main/webapp/html/import.html
@@ -30,6 +30,7 @@
 
     <a href="#" class="button small">Synkronoi tarjonta</a>
 
+    <a href="http://localhost:8180/valintalaskentakoostepalvelu/resources/hakuimport/aktivoi?hakuOid=xxx" class="button small">Mock nappi</a>
 
 
 </div>
