--- a/src/main/webapp/html/hakukohdelomake.html
+++ b/src/main/webapp/html/hakukohdelomake.html
@@ -15,10 +15,6 @@
 
         <div class="form-row-content width-60">
             <input  class="width-60" type="text" name="nimi" ng-model="model.hakukohde.nimi" required />
-            <!--
-            <br/>
-            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla cursus quam nec risus scelerisque rhoncus. Donec vitae dolor eu tortor pretium dictum. Suspendisse lobortis magna id ipsum facilisis dapibus.</small>
-            -->
         </div>
         <div class="clear"></div>
     </div>
@@ -27,9 +23,40 @@
         <label class="form-row-label" for="oid">Hakukohdekoodi:</label>
 
         <div class="form-row-content">
-            <!--{{model.hakukohde.oid}}
-            <input class="width-60" type="text" name="oid" ng-model="model.hakukohde.oid" required />         -->
-            {{model.hakukohde.hakukohdekoodi.arvo}} / {{model.hakukohde.hakukohdekoodi.uri}}
+            <table class="virkailija-table-1 width-60">
+                <thead>
+                <tr>
+                    <th>koodi</th>
+                    <th>arvo</th>
+                    <th>nimi</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="align-center">{{model.hakukohde.hakukohdekoodi.uri}}</td>
+                    <td class="align-center">{{model.hakukohde.hakukohdekoodi.arvo}}</td>
+                    <td class="align-center">{{model.hakukohde.hakukohdekoodi.nimiFi}}</td>
+                </tr>
+
+                </tbody>
+
+            </table>
+
+        </div>
+        <div class="clear"></div>
+    </div>
+
+    <div class="form-row ">
+        <label class="form-row-label">&nbsp;</label>
+        <div class="form-row-content width-60">
+            <input class="width-60" name="hakukohdekoodit" type="text" id="uusiHakukohdeUri" ng-model="uusiHakukohdeUri" list="hakukohdekoodit"/>
+            <datalist id="hakukohdekoodit">
+                <!--[if IE 9]><select disabled style="display:none"><![endif]-->
+                <option ng-repeat="data in model.hakukohdekoodit" value="{{data.koodiUri}}">{{data.metadata[0].nimi}}</option>
+                <!--[if IE 9]></select><![endif]-->
+            </datalist>
+
+            <button class="margin-bottom-0 small" ng-click="addHakukohdeUri()" ng-disabled="!model.hakukohdekoodit.length">Päivitä hakukohdekoodi</button>
         </div>
         <div class="clear"></div>
     </div>
@@ -76,29 +103,6 @@
         </div>
         <div class="clear"></div>
     </div>
-
-
-
-    <!--
-    <div class="form-row">
-        <label class="form-row-label" for="">Haut, joissa hakukohdetta käytetään</label>
-
-        <div class="form-row-content">
-            <select multiple size="7">
-                <option>Vaihto</option>
-                <option>Ehto</option>
-            </select>
-
-            <br/>
-            <small>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Nulla cursus quam nec risus scelerisque rhoncus. Donec vitae dolor eu tortor pretium dictum. S
-             uspendisse lobortis magna id ipsum facilisis dapibus.</small>
-
-        </div>
-        <div class="clear"></div>
-    </div>
-    -->
 
     <div class="form-row width-100"  >
         <div class="form-row-label">Valinnan vaiheet</div>
