--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -35,9 +35,6 @@
         <div class="clear"></div>
     </div>
 
-
-
-
     <div class="form-row">
         <label class="form-row-label" for="">Hakukohde koodit</label>
         <div class="form-row-content">
@@ -68,7 +65,7 @@
     </div>
 
     <div class="form-row ">
-        <label class="form-row-label">Lisää hakukohdekoodi</label>
+        <label class="form-row-label">&nbsp;</label>
         <div class="form-row-content width-60">
             <input class="width-60" name="hakukohdekoodit" type="text" id="uusiHakukohdeUri" ng-model="uusiHakukohdeUri" list="hakukohdekoodit"/>
             <datalist id="hakukohdekoodit">
