--- a/src/main/webapp/html/import.html
+++ b/src/main/webapp/html/import.html
@@ -2,38 +2,14 @@
     <a href="#/etusivu" class="tab"><span>Valintaryhmät ja hakukohteet</span></a>
     <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
     <a href="#/import" class="tab float-right current"><span>Yhteisvalinnan hallinta</span></a>
-
-    <!-- <a href="#/valinnanvaihe/:id/laskentakaava" class="tab"><span>Laskentakaavat</span></a>    -->
 </div>
 <div class="tabsheets">
 
     <h2>Synkronoi tarjonta</h2>
 
-     <!--
-    <ul class="selectlist">
-        <li ng-repeat="hakukohde in model.hakukohteet | filter:searchWord">
-            <a href="#/haku/{{hakuOid}}/hakukohde/{{hakukohde}}/{{subpage}}">
-                <span class="icon file"></span>
-	            <span class="label">
-	                {{hakukohde}}
-	            </span>
-            </a>
-        </li>
-    </ul>
-    -->
-    <div class="width-16-8 margin-vertical-2" ng-controller="ImportController">
-        <!--<select ng-model="model.hakuOid" ng-options="haku.haunKielistetytNimet[1].nimi for haku in model.haut">-->
-
+    <div>
         <select ng-model="model.hakuOid" ng-options="haku for haku in model.haut"></select>
-
-        <!--
-        <select ng-model="model.hakuOid">
-            <option ng-repeat="oid in model.haut">{{oid}}</option>
-        </select>
-    -->
+        <a ng-click="aktivoi()" class="button small">Synkronoi tarjonta</a>
     </div>
 
-    <a href="#" class="button small">Synkronoi tarjonta</a>
-    <a href="http://localhost:8180/valintalaskentakoostepalvelu/resources/hakuimport/aktivoi?hakuOid=xxx" class="button small">Mock nappi</a>
-e
 </div>
