--- a/src/main/webapp/html/import.html
+++ b/src/main/webapp/html/import.html
@@ -8,8 +8,9 @@
     <h2>Synkronoi tarjonta</h2>
 
     <div>
-        <select ng-model="model.hakuOid" ng-options="haku.oid for haku in model.haut"></select>
+        <select ng-model="model.hakuOid" ng-options="haku.nimi.fi for haku in model.haut"></select>
         <a ng-click="aktivoi()" class="button small">Synkronoi tarjonta</a>
     </div>
 
 </div>
+
