--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -10,35 +10,18 @@
 
 <form name="form" ng-submit="submit()">
 
+    <dl>
+        <dt>Valintaryhmän nimi</dt>
+        <dd><input class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/></dd>
 
-		
-	<div class="form-row">
-		<label class="form-row-label" for="">Valintaryhmän nimi</label>
+        <dt>Valintaryhmän tunniste(oid):</dt>
+        <dd>{{model.valintaryhma.oid}}</dd>
+    </dl>
 
-		<div class="form-row-content width-60">
-			<input class="width-60" type="text" name="" id="" ng-model="model.valintaryhma.nimi" required/>
-			  <!--
-	        <br/>
-			<div><small>Valintaryhmän nimeen liittyvä ohjeteksti.</small></div>
-		       -->
-	    </div>
-		<div class="clear"></div>
-	</div>
-
-    <div class="form-row">
-        <label class="form-row-label" for="">Valintaryhmän tunniste(oid):</label>
-        <div class="form-row-content">
-            <span class="nofield">{{model.valintaryhma.oid}}</span>
-            <!--	<input type="text" ng-model="valintaryhma.oid" disabled />
-               <input type="text" name="" id="" ng-model="valintaryhma.oid" />     -->
-        </div>
-        <div class="clear"></div>
-    </div>
-
-    <div class="form-row">
-        <label class="form-row-label" for="">Hakukohde koodit</label>
-        <div class="form-row-content">
-            <table class="virkailija-table-1 width-60">
+    <dl>
+        <dt>Hakukohdekoodit</dt>
+        <dd>
+            <table class="virkailija-table-1 width-100">
                 <thead>
                 <tr>
                     <th>koodi</th>
@@ -60,69 +43,34 @@
                 </tbody>
 
             </table>
-        </div>
-        <div class="clear"></div>
-    </div>
+        </dd>
+    </dl>
 
-    <div class="form-row ">
-        <label class="form-row-label">&nbsp;</label>
-        <div class="form-row-content width-60">
-            <input class="width-60" name="hakukohdekoodit" type="text" id="uusiHakukohdeUri" ng-model="uusiHakukohdeUri" list="hakukohdekoodit"/>
+    <dl ng-show="">
+        <dt>Lisää hakukohdekoodi</dt>
+        <dd><input class="width-60" name="hakukohdekoodit" type="text" id="uusiHakukohdeUri" ng-model="uusiHakukohdeUri" list="hakukohdekoodit"/>
             <datalist id="hakukohdekoodit">
-                <!--[if IE 9]><select disabled style="display:none"><![endif]-->
+                <!--[if IE 9]><select disabled style="display:none"><<!doctype html>
+                <html lang="en" endif="">
+                <head>
+                    <meta charset="UTF-8">
+                    <title>Document</title>
+                </head>
+                <body>
+                    
+                </body>
+                </html>
                 <option ng-repeat="data in model.hakukohdekoodit" value="{{data.koodiUri}}">{{data.metadata[0].nimi}}</option>
                 <!--[if IE 9]></select><![endif]-->
             </datalist>
 
             <button type="button" class="margin-bottom-0 small" ng-click="addHakukohdeUri()" ng-disabled="!model.hakukohdekoodit.length">Lisää hakukohdekoodi</button>
-        </div>
-        <div class="clear"></div>
-    </div>
+        </dd>
+    </dl>
 
-
-	<!--
-	<div class="form-row">
-		<label class="form-row-label" for="">Haut, joissa valintaryhmää käytetään</label>
-
-		<div class="form-row-content">
-			<div class="field-container-twinselect">
-				<select multiple size="7">
-					<option>Vaihto</option>
-					<option>Ehto</option>
-				</select>
-				<div class="buttons">
-					<span class="button small">&lt;</span>
-					<span class="button small">&gt;</span>
-				</div>
-				<select multiple size="7">
-					<option>Vaihto</option>
-					<option>Ehto</option>
-				</select>
-			</div>
-		</div>
-		<div class="clear"></div>
-	</div>
-	-->
-	<!--
-	<div class="form-row">
-		<div class="form-row-label">Valinnan vaiheet</div>
-
-		<div class="form-row-content">
-			<a href="#/hakukohde/{{hakukohde.oid}}/lisaaSisaltyvaValinnanvaihe">Lisää valinnan vaihe</a>
-			<ul>
-				<li>esivalinta</li>
-				<li>varsinainen valinta</li>
-				<li>varsinainen valinta</li>
-			</ul>
-		</div>
-		<div class="clear"></div>
-	</div>
-	-->
-
-
-    <div class="form-row width-100">
-        <div class="form-row-label">Valinnan vaiheet</div>
-        <div  class="form-row-content width-60">
+    <dl>
+        <dt>Valinnan vaiheet</dt>
+        <dd>
             <table ng-show="model.valinnanvaiheet" class="virkailija-table-1 margin-bottom-2 width-60">
                 <thead>
                 <tr>
@@ -148,17 +96,10 @@
                 </tbody>
 
             </table>
-
-            <div class="clear"></div>
-
-            <div ng-show="model.valintaryhma.oid" class="form-row">
-                    <span type="button" class="button small" ng-click="lisaaValinnanVaihe()">Lisää valinnanvaihe</span>
-                    <span type="button" class="button small" ng-click="lisaaValintakoeValinnanVaihe()">Lisää valintakoevalinnanvaihe</span>
-            </div>
-        </div>
-    </div>
-
-    <div class="clear"></div>
+            <span ng-show="model.valintaryhma.oid" class="button small" ng-click="lisaaValinnanVaihe()">Lisää valinnanvaihe</span>
+            <span ng-show="model.valintaryhma.oid" class="button small" ng-click="lisaaValintakoeValinnanVaihe()">Lisää valintakoevalinnanvaihe</span>
+        </dd>
+    </dl>
 
     <button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
 	<button type="button" class="float-left margin-right-1 button small" ng-click="cancel()">Peruuta</button>
